-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 13, 14
-
Component/s: hotspot
-
b14
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245945 | 13.0.4 | Richard Reingruber | P3 | Resolved | Fixed | b03 |
| JDK-8231166 | 11.0.6-oracle | Richard Reingruber | P3 | Resolved | Fixed | b01 |
| JDK-8231927 | 11.0.6 | Richard Reingruber | P3 | Resolved | Fixed | b01 |
| JDK-8234158 | openjdk8u242 | Richard Reingruber | P3 | Resolved | Fixed | team |
| JDK-8235159 | openjdk8u232 | Richard Reingruber | P3 | Resolved | Fixed | master |
n that was not added to the connection graph is passed to ConnectionGraph::not_global_escape(Node* n).
This case should be handled more gracefully by returning false.
This is split off from
calls. If e.g. one should be an integer constant not_global_escape() would crash.
- backported by
-
JDK-8231166 C2: Let ConnectionGraph::not_global_escape(Node* n) return false if n is not in the CG
-
- Resolved
-
-
JDK-8231927 C2: Let ConnectionGraph::not_global_escape(Node* n) return false if n is not in the CG
-
- Resolved
-
-
JDK-8234158 C2: Let ConnectionGraph::not_global_escape(Node* n) return false if n is not in the CG
-
- Resolved
-
-
JDK-8235159 C2: Let ConnectionGraph::not_global_escape(Node* n) return false if n is not in the CG
-
- Resolved
-
-
JDK-8245945 C2: Let ConnectionGraph::not_global_escape(Node* n) return false if n is not in the CG
-
- Resolved
-
- relates to
-
JDK-8227745 Enable Escape Analysis for Better Performance in the Presence of JVMTI Agents
-
- Resolved
-
-
JDK-8230711 ConnectionGraph::unique_java_object(Node* N) return NULL if n is not in the CG
-
- Resolved
-