8230363: C2: Let ConnectionGraph::not_global_escape(Node* n) return false if n is not in the CG

Reviewed-by: thartmann, mdoerr